tests/ui/errors/snapshots/module_graph_go_stdlib_hint.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Module not found
   ╭─[main.lis:1:8]
 1 │ import "time"
   ·        ───┬──
   ·           ╰── not a module in this project
   ╰────
  help: No `time` module found in your local project. Did you mean `import "go:time"` from Go's stdlib? · code: [resolve.module_not_found]
