tests/ui/errors/snapshots/module_graph_import_cycle.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Import cycle detected: module_a -> module_b -> module_c -> module_a
   ╭─[module_a.lis:1:8]
 1 │ import "module_b"
   ·        ─────┬────
   ·             ╰── `module_a` imports `module_b`
 2 │ 
   ╰────
   ╭─[module_b.lis:1:8]
 1 │ import "module_c"
   ·        ─────┬────
   ·             ╰── `module_b` imports `module_c`
 2 │ 
   ╰────
   ╭─[module_c.lis:1:8]
 1 │ import "module_a"
   ·        ─────┬────
   ·             ╰── `module_c` imports `module_a`
 2 │ 
   ╰────
  help: To break the cycle, remove one of the imports or extract common dependencies into a separate module · code: [resolve.import_cycle]
