tests/ui/errors/snapshots/module_graph_import_self_loop.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Import cycle detected: module_a -> module_a
  help: Remove the self-import · code: [resolve.import_cycle]
