tests/ui/errors/snapshots/module_graph_module_not_found.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Module not found
   ╭─[main.lis:1:8]
 1 │ import "nonexistent"
   ·        ──────┬──────
   ·              ╰── not a module in this project
   ╰────
  help: Check the module path and ensure the file exists · code: [resolve.module_not_found]
