tests/ui/errors/snapshots/module_graph_nested_import_error_attribution.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Module not found
   ╭─[mod.lis:1:8]
 1 │ import "inner"
   ·        ───┬───
   ·           ╰── not a module in this project
   ╰────
  help: Check the module path and ensure the file exists · code: [resolve.module_not_found]
