tests/ui/errors/snapshots/module_graph_src_prefix_hint.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Module not found
   ╭─[main.lis:1:8]
 1 │ import "src/math"
   ·        ─────┬────
   ·             ╰── not a module in this project
   ╰────
  help: Did you mean `import "math"`? The `src/` prefix is not needed — imports are relative to the source directory · code: [resolve.module_not_found]
