tests/ui/errors/snapshots/package_graph_import_cycle.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Import cycle detected: package_a -> package_b -> package_c -> package_a
  help: To break the cycle, remove one of the imports or extract common dependencies into a separate package · code: [resolve.import_cycle]
