tests/ui/errors/snapshots/package_graph_import_self_loop.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Import cycle detected: package_a -> package_a
  help: Remove the self-import · code: [resolve.import_cycle]
