tests/ui/errors/snapshots/package_graph_nested_import_error_attribution.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Package not found
   ╭─[mod.lis:1:8]
 1 │ import "inner"
   ·        ───┬───
   ·           ╰── not a package in this project
   ╰────
  help: Check the package path and ensure the file exists · code: [resolve.package_not_found]
