tests/ui/errors/snapshots/package_graph_package_not_found.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Package not found
   ╭─[main.lis:1:8]
 1 │ import "nonexistent"
   ·        ──────┬──────
   ·              ╰── not a package in this project
   ╰────
  help: Check the package path and ensure the file exists · code: [resolve.package_not_found]
